修改消息id改为ids
